fix spacing before footer

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,6 +15,7 @@ html {
 
 main {
   flex: 1 1 auto;
+  margin-bottom: 30px;
 }
 
 .brand {
